syntax = "proto2";

//option java_package = "com.effective.common.frame.frame.codec.protobuf";
option java_outer_classname = "SubscribeReqProto";

message SubscribeReq {

    required int32 subReqID = 1;

    required string userName = 2;

    required string phoneNumber = 5;

    optional string productName = 3;

    repeated string address = 4;

}